# smol-sr

./: .gitignore  Cargo.toml  README.md
gme/: Cargo.toml
gme/src/: conn.rs  main.rs  pk.rs
gme/src/handlers/: avatar.rs  lineup.rs  login.rs  mission.rs  mod.rs  player.rs  scene.rs
msg/: Cargo.toml  CmdId-2.6.5.json  StarRail2.6.5-miku.proto  build.rs
msg/src/: lib.rs
sdk/: Cargo.toml  build.rs
sdk/src/: main.rs
