[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
ohkami = { version = "0.20.0", features = ["rt_smol"] }
smol = "2.0.2"
msg.workspace = true
serde_json = "1.0.133"
rbase64 = "2.0.3"
prost = "0.13.3"

[build-dependencies]
prost = "0.13.3"
rbase64 = "2.0.3"
serde_json = "1.0.133"
msg.workspace = true